# pawkit

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
config/: actions.yaml  auto_review.yaml  pet.yaml
config-defaults/: actions.yaml  auto_review.yaml  pet.yaml
docs/: ACTIONS.md  ARCHITECTURE.md  CONFIG.md  DEVELOPMENT.md  SPRITES.md
src/: App.vue  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_review.rs  claude_session.rs  cli.rs  config.rs  executor.rs  hook_server.rs  lib.rs  logger.rs  main.rs  mention_monitor.rs  session_store.rs  slack_bridge.rs  win_focus.rs
src/components/: AuthNotification.vue  ContextMenu.vue  Pet.vue  QuickReviewInput.vue  ReviewNotification.vue  SlackQuickReply.vue
src/composables/: useActions.ts  useSessionCats.ts
